--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
   }
 
 
-    .land::after {
+/*     .land::after {
       content: '';
       position: absolute;
       top: 0;
@@ -31,7 +31,7 @@
       bottom: 0;
       width: 800px; /* Adjust the width of the shadow as needed */
       background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
-    }
+    } */
 
 
 
