--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,11 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(../images/land.jpeg) linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));  
+    /* background-image: url(../images/land.jpeg) linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));   */
   }
 
 
-/*     .land::after {
+    .land::after {
       content: '';
       position: absolute;
       top: 0;
@@ -31,7 +31,7 @@
       bottom: 0;
       width: 800px; /* Adjust the width of the shadow as needed */
       background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
-    } */
+    }
 
 
 
