--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
       right: 0;
       bottom: 0;
       width: 800px; /* Adjust the width of the shadow as needed */
-      background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+/*       background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)); */
     }
  */
 
