--- a/css/style.css
+++ b/css/style.css
@@ -15,22 +15,75 @@
 
 
 .land{
-    background-image: url(../images/land.jpeg);
+
+  background: url(../images/land.jpeg);
     background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+      background-size: cover;
+      background-repeat: no-repeat;
+   /* background-image: url(../images/land.jpeg) linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));   */
+    
   }
+
+  #land-ani{
+    position: relative;width: 100%;height: 100%;
+    background-color: black;
+    animation: move 4s 1.5s forwards;
+  }
+
+
+  @keyframes move {
+    0% {
+      
+      background-color: black;
+      /* background-image: none; */
+    }
+    100% {
+      /* opacity: 0; */
+      background-color: transparent;
+      /* background: url(../images/land.jpeg); */
+      
+      /*  */
+    }
+  }
+    /* .land::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      width: 800px; 
+      
+      background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
+    } 
+    */
 
 
 
     .land .container .row .right-side img{
       margin: auto !important;
       text-align: center;
+animation: logoanim 0.7s 0.2s forwards;
     }
 
 
-.land .container .row .col-md-4,.land .container .row .col-md-8{
-  /* margin-top: 4rem; */
+    @keyframes logoanim {
+      0% {
+        
+        transform: translateX(0);
+        /* background-image: none; */
+      }
+      100% {
+        transform: translateX(90px);
+      }
+    }
+
+
+.land .container .row .col-md-6{
+  margin-top: 5rem;
+}
+
+.land .container .row .col-md-6:nth-child(2){
+margin-top: 14rem;
 }
 
     .paragraph-land{
